[gd_scene load_steps=4 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://GameBoard.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="GameBoard" parent="." instance=ExtResource( 2 )]

[node name="GameCam" type="Camera2D" parent="."]
position = Vector2( 36, 23 )
current = true
smoothing_enabled = true

[node name="Player1" parent="." instance=ExtResource( 3 )]
position = Vector2( 77.4499, 65.1028 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 76.3274, 63.9803 )
player = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Button" type="Button" parent="CanvasLayer"]
margin_left = 121.0
margin_top = 98.0
margin_right = 277.0
margin_bottom = 162.0
text = "Let's Go"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="CanvasLayer/Button" to="." method="_on_Button_pressed"]
